[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuclio-logger"
version = "1.0.0"
description = "Logger JSON padronizado para funcoes Nuclio serverless"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "DrOnline" }]

[tool.setuptools.packages.find]
where = ["."]
