[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuclio-logger"
version = "1.0.0"
description = "Logger JSON padronizado para funcoes Nuclio serverless"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "DrOnline" }]
dependencies = [
    "boto3>=1.26.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pika>=1.3.0",
    "databricks-sql-connector>=2.0.0",
    "databricks-sdk>=0.12.0",
    "pandas>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
